<resources>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGF2aWRncmF0aCIsImEiOiJjbDBjZHBqYWcwYXhnM2JvbXZvN2I4bmV3In0.I-EEsxBWCBqOpgZ5-mYYyg</string>
    <string name="app_name">Restaurant App Two</string>
    <string name="login_activity_title">Welcome back</string>
    <string name="login_activity_subtitle">Sign in to Continue</string>
    <string name="login_activity_forgot_password_prompt">Forgot your password?</string>
    <string name="forgot_password_activity_prompt">Enter your email address below and we\'ll send you an email with instructions on how to change your password</string>
    <string name="forgot_password_activity_title">Forgot Password</string>
    <string name="forgot_password_activity_button_send_title">Send</string>
    <string name="otp_verification_activity_title">Verify your Phone Number</string>
    <string name="otp_verification_activity_prompt">Enter your OTP code here</string>
    <string name="otp_verification_activity_button_verify_title">Verify Now</string>
    <string name="meal_details_activity_add_to_order_title">Add to order</string>
    <string name="create_account_activity_title">Create Account</string>
    <string name="create_account_activity_subtitle">Hi, kindly fill in the form to proceed shopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout_activity_delivery_address_title">Delivery Address</string>
    <string name="checkout_activity_card_holder_title">Card holder name</string>
    <string name="checkout_activity_expiry_date_title">Expiry Date</string>
    <string name="checkout_activity_cvv_title">CVV</string>
    <string name="checkout_activity_title">Checkout</string>
    <string name="checkout_activity_save_card_text">Save this card for future payments?</string>
    <string name="most_popular_activity_title">Most Popular</string>
    <string name="trending_activity_title">Trending</string>
    <string name="meal_order_activity_title">Order</string>
    <string name="menu_meal_order_item_close_title">Close</string>
    <string name="meal_order_activity_button_checkout_title">Checkout</string>
    <string name="meal_order_activity_subtotal_title">Subtotal</string>
    <string name="meal_order_activity_delivery_title">Delivery</string>
    <string name="meal_order_activity_total_title">Total</string>
    <string name="restaurant_details_activity_delivery_price_title">Delivery</string>
    <string name="restaurant_details_activity_open_time_title">Open time</string>
    <string name="restaurant_details_activity_featured_items_title">Featured Items</string>
    <string name="restaurant_details_activity_menu_title">Menu</string>
    <string name="restaurant_details_activity_reviews_title">Reviews</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="menu_profile_item_edit_title">Edit</string>
    <string name="profile_fragment_payment_title">Payment cards</string>
    <string name="profile_fragment_payment_description">Add a credit or debit card</string>
    <string name="profile_fragment_address_title">Address</string>
    <string name="profile_fragment_address_description">Add or remove a delivery address</string>
    <string name="profile_fragment_referral_title">Refer friends</string>
    <string name="profile_fragment_referral_description">Get 5 free deliveries</string>
    <string name="profile_fragment_delivery_support_title">Delivery Support</string>
    <string name="profile_fragment_settings_title">Settings</string>
    <string name="profile_fragment_terms_of_use_title">Terms of use</string>
    <string name="profile_fragment_privacy_policy_title">Privacy policy</string>
    <string name="location_prompt_fragment_select_manually_prompt"><u>Select it manually</u></string>
    <string name="location_prompt_fragment_title">Hi, nice to meet you!</string>
    <string name="location_prompt_fragment_instructions">Choose your location to start finding restaurants around you</string>
    <string name="location_prompt_fragment_button_current_location_title">Use current location</string>
    <string name="location_list_fragment_title">Select Location</string>
    <string name="location_list_fragment_use_current_location_prompt">Use current location</string>
    <string name="onboarding_skip_prompt">Skip</string>
    <string name="onboarding_fragment_discover_title">Discover places near you</string>
    <string name="onboarding_fragment_discover_description">We make it simple to find the food you crave. Enter your address and let us do the rest</string>
    <string name="onboarding_fragment_choose_dish_description">When you order Eat Street, we\'ll hook you up with exclusive options, specials, and rewards</string>
    <string name="onboarding_fragment_choose_dish_title">Choose A Tasty Dish</string>
    <string name="onboarding_fragment_delivery_title">Pick Up Your Delivery</string>
    <string name="onboarding_fragment_delivery_description">We make food ordering fast, simple, and free - no matter if you order online or cash</string>
    <string name="onboarding_next_prompt">Next \u00BB</string>
    <string name="bottom_nav_main_home_title">Home</string>
    <string name="bottom_nav_main_discover_title">Discover</string>
    <string name="bottom_nav_main_cart_title">Cart</string>
    <string name="bottom_nav_main_favorites_title">Favorites</string>
    <string name="bottom_nav_main_profile_title">Profile</string>
    <string name="menu_home_filter_item_title">Filter</string>
    <string name="favorites_fragment_title">Favorites</string>
    <string name="meal_details_activity_description_title">Description</string>
    <string name="meal_details_activity_extras_title">Extras</string>
    <string name="meal_details_activity_quantity_title">Quantity</string>
    <string name="home_search_fragment_empty_error_prompt">No results. Please refine your search</string>
    <string name="checkout_activity_card_number_title">Card Number</string>
    <string name="location_list_fragment_empty_error_text">No results. Please refine your search</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut accumsan purus ut placerat lobortis. Donec magna dolor, vulputate et orci ac, ultrices egestas quam. Mauris libero nisi, porta accumsan lorem eget, commodo venenatis tortor. In mattis sapien a eros sodales bibendum. Quisque eleifend dui sed luctus interdum. Curabitur feugiat vehicula quam, et semper ipsum finibus quis. Vestibulum viverra sed augue eu lacinia. Donec egestas lacus quis quam venenatis lacinia. Nulla ut mi eu ante euismod imperdiet quis id lacus. Donec vitae ullamcorper orci. Suspendisse commodo tellus ipsum, quis lobortis ipsum tempus at. Nam a ultrices sapien. Sed maximus lorem vitae nibh volutpat, sit amet laoreet augue elementum. Integer suscipit odio sed dui condimentum mattis. Sed sollicitudin hendrerit nunc vel tempor.</string>
</resources>