<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuitem_main_bottom_home" android:title="@string/bottom_nav_main_home_title" android:icon="@drawable/ic_baseline_home_24"/>
    <item android:id="@+id/menuitem_main_bottom_discover" android:title="@string/bottom_nav_main_discover_title" android:icon="@drawable/ic_baseline_location_on_24"/>
    <item android:id="@+id/menuitem_main_bottom_cart" android:title="@string/bottom_nav_main_cart_title" android:icon="@drawable/ic_baseline_shopping_cart_24"/>
    <item android:id="@+id/menuitem_main_bottom_favorites" android:title="@string/bottom_nav_main_favorites_title" android:icon="@drawable/ic_baseline_star_24"/>
    <item android:id="@+id/menuitem_main_bottom_profile" android:title="@string/bottom_nav_main_profile_title" android:icon="@drawable/ic_baseline_person_24"/>
</menu>