<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".onboarding.LocationPromptFragment">
<!--    Vector asset from unDraw.co-->
    <ImageView
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:src="@drawable/ic_undraw_my_location_re_r52x"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/location_prompt_fragment_title"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/location_prompt_fragment_instructions"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/button_location_prompt_use_current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_prompt_fragment_button_current_location_title"
        android:drawableStart="@drawable/ic_baseline_near_me_24"
        android:layout_marginTop="24dp"/>
    <TextView
        android:id="@+id/textview_location_prompt_manual_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/location_prompt_fragment_select_manually_prompt"
        android:layout_marginTop="24dp"/>
</LinearLayout>