<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".cart.CheckoutActivity">
    <Toolbar
        android:id="@+id/toolbar_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:title="@string/checkout_activity_title" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:background="#123456"
            android:gravity="fill"
            android:text="Placeholder Credit Card"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/textview_checkout_address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout_activity_delivery_address_title"
            android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/edittext_checkout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textview_checkout_card_holder_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout_activity_card_holder_title"
            android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/edittext_checkout_card_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/textview_checkout_expiry_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout_activity_expiry_date_title"
            android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/edittext_checkout_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textview_checkout_cvv_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout_activity_cvv_title"
            android:layout_marginTop="16dp"/>
        <EditText
        android:id="@+id/edittext_checkout_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:maxLength="3"
            android:layout_marginTop="16dp"/>
        <CheckBox
            android:id="@+id/checkbox_checkout_save_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout_activity_save_card_text"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button_checkout_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Checkout"
        android:layout_margin="16dp"/>
</LinearLayout>