<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".auth.OtpVerificationActivity">
    <TextView
        android:id="@+id/textview_otp_verification_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification_activity_title"
        android:textSize="38sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/textview_otp_verification_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification_activity_prompt"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="#0F0"
        android:text="Placeholder"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="32dp"/>
    <Button
        android:id="@+id/button_otp_verification_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification_activity_button_verify_title"
        android:layout_marginTop="40dp"/>
</LinearLayout>