<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.ForgotPasswordActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_restaurant_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:navigationIconTint="@color/black"
        style="@style/ToolbarStyle.White"
        android:elevation="0dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="16dp">
    <TextView
        android:id="@+id/text_view_forgot_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_activity_title"
        style="@style/TextLargeTitle"/>
    <TextView
        android:id="@+id/text_view_forgot_password_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_activity_prompt"
        style="@style/TextContent"
        android:layout_marginTop="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@null"
        android:hint="Enter your email"
        android:layout_marginTop="16dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_forgot_password_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_forgot_password_send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_activity_button_send_title"
        android:layout_marginTop="32dp"/>
    </LinearLayout>
</LinearLayout>